--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -21,3 +21,11 @@
 
 @media only screen and (min-width: 1500px) {
 }
+
+.fixedHeaderContainer {
+    /* background: #8ace99; */
+}
+
+.headerTitleWithLogo {
+    display: none !important;
+}
